--- a/ansible/roles/common/templates/etc/pouta_blueprints/app_config.j2
+++ b/ansible/roles/common/templates/etc/pouta_blueprints/app_config.j2
@@ -10,15 +10,16 @@ BASE_URL: 'https://{{ public_ipv4 }}:{{ docker_https_port }}/'
 BASE_URL: 'https://{{ public_ipv4 }}/'
 {% endif %}
 {% endif %}
-PUBLIC_HTTPS_PROXY_PORT: {{ public_https_proxy_port }}
 {% if apache_enable_ssl %}
-INTERNAL_API_BASE_URL: 'https://www:{{ docker_https_port_worker }}/api/v1'
+INTERNAL_API_BASE_URL: 'https://{{ docker_api_host }}:{{ docker_https_port_worker }}/api/v1'
 {% else %}
-INTERNAL_API_BASE_URL: 'http://www:{{ docker_http_port_worker }}/api/v1'
+INTERNAL_API_BASE_URL: 'http://{{ docker_api_host }}:{{ docker_http_port_worker }}/api/v1'
 {% endif %}
-
-INTERNAL_HTTPS_PROXY_PORT: {{ internal_https_proxy_port }}
 {% if enable_shibboleth %}
 ENABLE_SHIBBOLETH_LOGIN: True
 {% endif %}
 PROVISIONING_NUM_WORKERS: {{ provisioning_num_workers }}
+
+PROXY_PUBLIC_HTTPS_PORT: {{ public_https_proxy_port }}
+PROXY_INTERNAL_HTTPS_PORT: {{ internal_https_proxy_port }}
+PROXY_PUBLIC_IPV4: {{ proxy_public_ipv4 }}
