proxy variable name cleanup, test mocks fixed

--- a/ansible/roles/common/templates/etc/pouta_blueprints/app_config.j2
+++ b/ansible/roles/common/templates/etc/pouta_blueprints/app_config.j2
@@ -20,6 +20,6 @@ ENABLE_SHIBBOLETH_LOGIN: True
 {% endif %}
 PROVISIONING_NUM_WORKERS: {{ provisioning_num_workers }}
 
-PROXY_PUBLIC_HTTPS_PORT: {{ public_https_proxy_port }}
-PROXY_INTERNAL_HTTPS_PORT: {{ internal_https_proxy_port }}
+PROXY_PUBLIC_HTTPS_PORT: {{ proxy_public_https_port }}
+PROXY_INTERNAL_HTTPS_PORT: {{ proxy_internal_https_port }}
 PROXY_PUBLIC_IPV4: {{ proxy_public_ipv4 }}
