--- a/pouta_blueprints/static/partials/welcome.html
+++ b/pouta_blueprints/static/partials/welcome.html
@@ -10,7 +10,8 @@
     name="shibboleth-login">
         <div class="col-md-6 col-xs-6">
             <p>
-                <a href="/login"><img src="/img/haka.gif" alt="Haka login" /></a>
+                <a href="sso.html"><img src="/img/haka_new.gif" alt="Haka login" /></a>
+                <a href="sso.html"><img src="/img/kalmar2login.png" alt="Kalmar2 login" /></a>
             </p>
         </div>
     </div>
@@ -39,6 +40,5 @@
             If you don't have access to your password, you
             can <a href="#/reset_password">reset it here</a>
         </div>
-    </div>
     </div>
 </div>
